# vehicle-bomb-detection

./: .gitignore  frame_converter.py  generate_data.py  pyproject.toml  requirements.txt
notebooks/: average-detector-refinement.ipynb  basic-detector-refinement.ipynb  demo.ipynb  frames_conversion.ipynb  generate_data.ipynb  imageai_demo.ipynb  mog-detector-refinement.ipynb  motion_detection.ipynb  simplyfied_task.ipynb  video_conversion_exploration.ipynb  yolo_demo.ipynb
src/: frames_convertion.py  generate_data.py  motion_detection.py
